fixed lang selector dropdown jumping on click

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -367,11 +367,8 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   .brandLogo {
     height: 46px;
   }
-  .langBtn {
-    height: 46px;
-  }
-  .dropdownItem {
-    padding: 13px;
+  #dropdown {
+    transform: scale(0.925);
   }
   .searchInput {
     padding: 9px 45px 9px 18px;
@@ -390,16 +387,8 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   .brandLogo {
     height: 42px;
   }
-  .langBtn {
-    height: 42px;
-    font-size: 13px;
-    max-width: 160px;
-  }
-  #dropdownMenu {
-    font-size: 13px;
-  }
-  .dropdownItem {
-    padding: 11px;
+  #dropdown {
+    transform: scale(0.85);
   }
   .searchInput {
     padding: 5px 35px 5px 16px;
@@ -418,12 +407,8 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   .brandLogo {
     height: 38px;
   }
-  .langBtn {
-    height: 38px;
-    max-width: 145px;
-  }
-  .dropdownItem {
-    padding: 9px;
+  #dropdown {
+    transform: scale(0.775);
   }
   #navigation {
     position: sticky;
